--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,3 +1,27 @@
-<nav>
-  About us Services People Community Careers Blog
-</nav>
+<nav class="navbar navbar-inverse navbar-static-top example6">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar6">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand text-hide" href="http://disputebills.com">Callibrity
+        </a>
+      </div>
+      <div id="navbar6" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">{{ navigationElements[0] }}</a></li>
+          <li><a href="#">{{ navigationElements[1] }}</a></li>
+          <li><a href="#">{{ navigationElements[2] }}</a></li>
+          <li><a href="#">{{ navigationElements[3] }}</a></li>
+          <li><a href="#">{{ navigationElements[4] }}</a></li>
+          <li><a href="#">{{ navigationElements[5] }}</a></li>
+          <li><a href="#">{{ navigationElements[6] }}</a></li>
+        </ul>
+      </div>
+      <!--/.nav-collapse -->
+    </div>
+    <!--/.container-fluid -->
+  </nav>
