nav bar progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-navigation></app-navigation>
+<div class="container-fluid navigation">
+  <app-navigation></app-navigation>
+</div>
+
 <div style="text-align:center">
   <h1>
     Welcome to {{title}}!
