Add main content component; more footer tests

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="container ">
         <div class="row">
               <div class="col-md-4 text-left">
-                  <p class="footertext">Recent blog posts:</p>
+                  <p id="recent-blog-posts" class="footertext">Recent blog posts:</p>
                   <p class="footertext "> blog post by foo</p>
                   <p class="footertext"> blog post by bar</p>
                   <p class="footertext"> foobar blog post</p>
@@ -27,32 +27,3 @@
             </div>
         </div>
     </div>
-
-
-<!--<footer class="bd-footer footer-middle text-muted">
-  <div class="container">
-    <div class="col-md-3 col-sm-6">
-      <div class="footer-pad">
-        <h4> Recent blog posts </h4>
-        <p>blog post by foo</p>
-        <p>blog post by bar</p>
-        <p>foobar blog post</p>
-      </div>
-    </div>
-    <div class="col-md-3 col-sm-6">
-      <div class="footer-pad">
-        <p>Copyright 2016 Callibrity Solutions, LLC. 
-            9462 Towne Square Ave
-            Blue Ash, OH 45242
-        </p>
-      </div>
-    </div>
-    <div class="col-md-3 col-sm-6">
-      <div class="footer-pad">
-        <img src="/assets/images/bptw-2016.png">
-        <img src="/assets/images/fast55.png">
-        <img src="/assets/images/Inc5000_colorstacked.png">
-      </div>
-    </div>
-  </div>
-</footer>-->
