Move hero to within home folder. Add CSS to make video play as background to jumbotron. Clean up components and change navbar classes to use Bootstrap 4 beta classes.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,29 +1,30 @@
-<div id="footer text-center">
-    <div class="container ">
-        <div class="row">
-              <div class="col-md-4 text-left">
-                  <p id="recent-blog-posts" class="footertext">Recent blog posts:</p>
-                  <p class="footertext "> blog post by foo</p>
-                  <p class="footertext"> blog post by bar</p>
-                  <p class="footertext"> foobar blog post</p>
-              </div>
-              <div class="col-md-4 text-center">
-                 <p class="footertext">Copyright 2016 Callibrity Solutions, LLC. 
-                    9462 Towne Square Ave
-                    Blue Ash, OH 45242
-                </p>
-              </div>
-              <div class="col-md-4 text-right">
-                <a href='http://www.bizjournals.com/cincinnati/news/2016/09/06/see-if-your-company-is-a-finalist-for-the-couriers.html' target='_blank'>
-                  <img src="/assets/images/bptw-2016.png">
-                </a>
-                <a href='/blog/2016-fast-55'>
-                  <img src="/assets/images/fast55.png">
-                </a>
-                <a href='https://www.inc.com/profile/callibrity-solutions' target='_blank'>
-                  <img src="/assets/images/Inc5000_colorstacked.png">
-                </a>
-              </div>
-            </div>
-        </div>
+<div class="container-fluid">
+  <div class="row align-items-center" id="footer">
+    <div class="col-md-4 text-left">
+        <p id="recent-blog-posts" class="footertext">Recent blog posts:</p>
+        <p class="footertext ">blog post by foo</p>
+        <p class="footertext">blog post by bar</p>
+        <p class="footertext">foobar blog post</p>
     </div>
+    <div class="col-md-4 text-center">
+      <p translate="no" class="footertext">
+        Copyright &copy; 2017<br>
+        Callibrity Solutions, LLC.<br>
+        9462 Towne Square Ave<br>
+        Blue Ash, OH 45242
+      </p>
+    </div>
+    <div class="col-md-4 text-right">
+      <a href='http://www.bizjournals.com/cincinnati/news/2016/09/06/see-if-your-company-is-a-finalist-for-the-couriers.html' target='_blank'>
+        <img src="/assets/images/bptw-2016.png">
+      </a>
+      <a href='/blog/2016-fast-55'>
+        <img src="/assets/images/fast55.png">
+      </a>
+      <a href='https://www.inc.com/profile/callibrity-solutions' target='_blank'>
+        <img src="/assets/images/Inc5000_colorstacked.png">
+      </a>
+    </div>
+  </div>
+</div>
+
