--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div class="container-fluid navigation">
-  <app-navigation></app-navigation>
-</div>
+<app-navigation></app-navigation>
 
-<app-body></app-body>
+<app-home></app-home>
 
-<div class="container">
-  <app-footer></app-footer>
-</div>
+<app-footer></app-footer>
