--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,10 +1,8 @@
 #footer {
-  /*position: absolute;*/
   bottom: 0;
-  width: 100%;
-  height: 280px;
-  padding: 2% 4%;
-  background-color: #eee;
+  background-color: #666;
+  padding: 20px;
+  color: #fff;
 }
 
 img {
