--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,61 +1,55 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-  <a class="navbar-brand" href="#"><img class="img-fluid" src="/assets/images/Callibrity-logo-new.png"></a>
-
-   <ul class="nav justify-content-end">
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/" routerLinkActive="active">{{ getAboutUsLinkText() }}</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-between">
+  <a class="navbar-brand" routerLink="/"><img class="img-fluid" src="/assets/images/Callibrity-logo-new.png"></a>
+  <ul class="navbar-nav">
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/about">{{ getAboutUsLinkText() }}</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/" routerLinkActive="active">{{ getServicesLinkText() }}</a>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/services">{{ getServicesLinkText() }}</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/" routerLinkActive="active">{{ getPeopleLinkText() }}</a>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/people">{{ getPeopleLinkText() }}</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/" routerLinkActive="active">{{ getCommunityLinkText() }}</a>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/community">{{ getCommunityLinkText() }}</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/" routerLinkActive="active">{{ getCareersLinkText() }}</a>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/careers">{{ getCareersLinkText() }}</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/" routerLinkActive="active">{{ getBlogLinkText() }}</a>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/blog">{{ getBlogLinkText() }}</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/" routerLinkActive="active">{{ getContactLinkText() }}</a>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/contact">{{ getContactLinkText() }}</a>
     </li>
   </ul>
 </nav>
 
-
-
-<!--<nav class="navbar navbar-toggleable-sm navbar-fixed-top navbar-light bg-faded">
-  <div class="navbar navbar-default">
-    <div class="navbar-inner">
-      <div class="container">
-        <ul class="nav navbar-nav">
-          <li class="active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>-->
-
-    <!--<a routerLink="/" routerLinkActive="active"><img src="/assets/images/Callibrity-logo-new.png"></a>
-    <a routerLink="/" routerLinkActive="active">About Us</a>
-    <a routerLink="/" routerLinkActive="active">Services</a>
-    <a routerLink="/" routerLinkActive="active">People</a>
-    <a routerLink="/" routerLinkActive="active">Community</a>
-    <a routerLink="/" routerLinkActive="active">Careers</a>
-    <a routerLink="/" routerLinkActive="active">Blog</a>
-    <a routerLink="/" routerLinkActive="active">Contact</a>-->
-<!--</nav>-->
+<!--
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown link
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+  -->
