Fix EJ's broken tests... smh do you TDD bro?

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
         <p class="footertext">foobar blog post</p>
     </div>
     <div class="col-md-4 text-center">
-      <p translate="no" class="footertext">
+      <p id="address" translate="no" class="footertext">
         Copyright &copy; 2017<br>
         Callibrity Solutions, LLC.<br>
         9462 Towne Square Ave<br>
